--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -12,4 +12,13 @@
     padding-left: 72px;
 }
 
+.close-x-hover {
+    position: absolute;
+    top: 15;
+    right: 0;
+    margin: 20px;
+    cursor: pointer;
+    opacity: 1;
+}
+
 
