--- a/src/components/left.css
+++ b/src/components/left.css
@@ -53,6 +53,20 @@
     box-shadow: 0px 3px 6px #0000001A;
     border-radius: 4px;
     opacity: 1;
+    display: grid;
+    grid-template-columns: 1fr 30px;
+}
+
+.signup-btn > span {
+   text-align: center;
+   align-self: center;
+   justify-self: center;
+   margin-left: 20px;
+}
+
+.signup-btn > svg {
+    align-self: center;
+   justify-self: center;
 }
 
 .touch-btn {
